# VenturasCrawler

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  docker-compose.yml.dev  entrypoint.sh  pyproject.toml  pytest.ini
apps/product/: apps.py  conftest.py  models.py  tests.py  urls.py
apps/product/api/v1/: views.py
apps/product/management/commands/: populate_initial_db.py
apps/product/migrations/: 0001_initial.py  0002_alter_product_product_name.py
conf/: asgi.py  urls.py  wsgi.py
conf/rest_config/exception_handler/: handler.py
conf/settings/: .env.example  base.py
core/: enums.py  models.py  urls.py  views.py
core/constant/: constants.py
